# CV2025-project

./: .gitattributes  .gitignore  Dataset.py  README.md  Trainer.py  heatmaps.py  pyproject.toml  raport_JK.md  raport_RM.md  sparse_model.md  sparse_model.py  test.py
finetuning/: dataset_finetune.py  train_finetune.py  trainer_finetune.py
lightning_logs/version_20/: hparams.yaml  metrics.csv
lightning_logs/version_20/checkpoints/: epoch=0-step=1932.ckpt
lightning_logs/version_25/: metrics.csv
lightning_logs/version_28/: metrics.csv
